log
Thu 11 May 2023 04:25:28 PM UTC: 
 tests:  0|4
total_score: 0/70
b8080f9
Thu 11 May 2023 04:49:16 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|4
total_score: 0/70
5c6e060
Thu 11 May 2023 04:50:36 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
cdb2e4f
Thu 11 May 2023 05:00:29 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:35: error: subscripted value is neither array nor pointer nor vector
   22 |     return pq->heapArray->priority[0];
      |                                   ^
heap.c:21:14: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   21 |     heapElem heapArray;
      |              ^~~~~~~~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1d52285
Thu 11 May 2023 05:01:44 PM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
3ca412d
Thu 11 May 2023 05:02:13 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
99e6437
Thu 11 May 2023 05:16:16 PM UTC: 
 heap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:52:24: error: expected ‘;’ before ‘}’ token
   52 |       padre = (pos-1)/2
      |                        ^
      |                        ;
   53 |     }
      |     ~                   
Compilation failed
20774ab
Thu 11 May 2023 05:16:23 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
2bfdf2d
Thu 11 May 2023 05:30:29 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|2
total_score: 35/70
49247e2
Sun 14 May 2023 03:35:16 AM UTC: 
 heap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  6|1
total_score: 60/70
65d6d27
Sun 14 May 2023 03:37:40 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|1
total_score: 60/70
2074fa4
Sun 14 May 2023 03:39:01 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
66defa0
